--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.exclude": {
 		"dist": true,
-		"node_modules": true
+		"node_modules": true,
+		"projects": true,
+		"outputs": true
 	}
 }
