--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
 	"repository": "https://github.com/kk-mats/jukebox-server.git",
 	"author": "kk-mats <k.mats.kk@gmail.com>",
 	"dependencies": {
+		"axios": "^0.19.0",
 		"express": "^4.17.1",
-		"mongoose": "^5.7.3"
+		"js-yaml": "^3.13.1",
+		"mongoose": "^5.7.3",
+		"rimraf": "^3.0.0",
+		"simple-git": "^1.126.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.1",
+		"@types/js-yaml": "^3.12.1",
 		"@types/mongoose": "^5.5.18",
 		"@types/node": "^12.11.7",
+		"@types/rimraf": "^2.0.3",
 		"@typescript-eslint/eslint-plugin": "^2.0.0",
 		"@typescript-eslint/parser": "^2.0.0",
 		"@typescript-eslint/typescript-estree": "^2.0.0",
