feat: Add packages for user management

--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
 	"author": "kk-mats <k.mats.kk@gmail.com>",
 	"dependencies": {
 		"axios": "^0.19.0",
+		"bcrypt": "^3.0.6",
 		"express": "^4.17.1",
+		"express-session": "^1.17.0",
 		"js-yaml": "^3.13.1",
-		"mongoose": "^5.7.3",
+		"mongoose": "^5.7.10",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
 		"rimraf": "^3.0.0",
 		"simple-git": "^1.126.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^3.0.0",
 		"@types/express": "^4.17.1",
+		"@types/express-session": "^1.15.15",
 		"@types/js-yaml": "^3.12.1",
-		"@types/mongoose": "^5.5.18",
+		"@types/mongoose": "^5.5.30",
 		"@types/node": "^12.11.7",
+		"@types/passport": "^1.0.1",
+		"@types/passport-local": "^1.0.33",
 		"@types/rimraf": "^2.0.3",
 		"@typescript-eslint/eslint-plugin": "^2.0.0",
 		"@typescript-eslint/parser": "^2.0.0",
