--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"axios": "^0.19.0",
 		"bcrypt": "^3.0.6",
+		"cookie-parser": "^1.4.4",
 		"express": "^4.17.1",
 		"express-session": "^1.17.0",
 		"js-yaml": "^3.13.1",
@@ -18,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^3.0.0",
+		"@types/cookie-parser": "^1.4.2",
 		"@types/express": "^4.17.1",
 		"@types/express-session": "^1.15.15",
 		"@types/js-yaml": "^3.12.1",
