--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"axios": "^0.19.0",
 		"bcrypt": "^3.0.6",
+		"connect-mongodb-session": "^2.2.0",
 		"cookie-parser": "^1.4.4",
 		"express": "^4.17.1",
 		"express-session": "^1.17.0",
@@ -15,10 +16,12 @@
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
 		"rimraf": "^3.0.0",
-		"simple-git": "^1.126.0"
+		"simple-git": "^1.126.0",
+		"slugify": "^1.3.6"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^3.0.0",
+		"@types/connect-mongodb-session": "^0.0.2",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/express": "^4.17.1",
 		"@types/express-session": "^1.15.15",
@@ -31,6 +34,7 @@
 		"@typescript-eslint/eslint-plugin": "^2.0.0",
 		"@typescript-eslint/parser": "^2.0.0",
 		"@typescript-eslint/typescript-estree": "^2.0.0",
+		"dotenv": "^8.2.0",
 		"eslint": "^6.2.2",
 		"eslint-config-airbnb-base": "^14.0.0",
 		"eslint-config-prettier": "^6.1.0",
@@ -46,9 +50,7 @@
 		"typescript": "^3.6.3"
 	},
 	"scripts": {
-		"clean": "rimraf dist",
-		"tsc": "tsc -P tsconfig.prod.json",
-		"dev": "ts-node-dev --watch src -r tsconfig-paths/register src/index.ts",
-		"build": "npm-run-all clean tsc"
+		"dev": "ts-node-dev --watch src -r dotenv/config -r tsconfig-paths/register src/index.ts",
+		"build": "ts-node -r dotenv/config -r tsconfig-paths/register src/index.ts"
 	}
 }
