chore: Fix runtime args for dotenv

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,8 @@
 			"name": "Launch Program",
 			"runtimeArgs": [
 				"-r",
+				"dotenv/config",
+				"-r",
 				"ts-node/register",
 				"-r",
 				"tsconfig-paths/register"
