--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"repository": "https://github.com/kk-mats/jukebox-server.git",
 	"author": "kk-mats <k.mats.kk@gmail.com>",
 	"dependencies": {
+		"archiver": "^3.1.1",
 		"axios": "^0.19.0",
 		"bcrypt": "^3.0.6",
 		"connect-mongodb-session": "^2.2.0",
@@ -20,6 +21,7 @@
 		"slugify": "^1.3.6"
 	},
 	"devDependencies": {
+		"@types/archiver": "^3.0.0",
 		"@types/bcrypt": "^3.0.0",
 		"@types/connect-mongodb-session": "^0.0.2",
 		"@types/cookie-parser": "^1.4.2",
