--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "jukebox-server",
 	"version": "1.0.0",
-	"main": "index.ts",
+	"main": "./src/application/route/index.ts",
 	"repository": "https://github.com/kk-mats/jukebox-server.git",
 	"author": "kk-mats <k.mats.kk@gmail.com>",
 	"dependencies": {
@@ -24,7 +24,6 @@
 	"devDependencies": {
 		"@types/archiver": "^3.0.0",
 		"@types/bcrypt": "^3.0.0",
-		"@types/boom": "^7.3.0",
 		"@types/connect-mongodb-session": "^0.0.2",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/express": "^4.17.2",
