fix: Fix the route path

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
 				"tsconfig-paths/register"
 			],
 			"args": [
-				"${workspaceFolder}/src/index.ts"
+				"${workspaceFolder}/src/application/route/index.ts"
 			]
 		}
 		
