--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
 	"dependencies": {
 		"@hapi/boom": "^9.0.0",
 		"archiver": "^3.1.1",
-		"axios": "^0.19.0",
-		"bcrypt": "^3.0.7",
-		"connect-mongodb-session": "^2.2.0",
+		"axios": "^0.19.2",
+		"bcrypt": "^3.0.8",
+		"connect-mongodb-session": "^2.3.1",
 		"cookie-parser": "^1.4.4",
 		"express": "^4.17.1",
 		"express-session": "^1.17.0",
+		"express-validator": "^6.4.0",
 		"js-yaml": "^3.13.1",
-		"mongoose": "^5.8.3",
+		"mongoose": "^5.8.11",
 		"passport": "^0.4.1",
 		"passport-local": "^1.0.0",
-		"rimraf": "^3.0.0",
-		"simple-git": "^1.129.0",
+		"rimraf": "^3.0.1",
+		"simple-git": "^1.131.0",
 		"slugify": "^1.3.6"
 	},
 	"devDependencies": {
@@ -28,32 +29,32 @@
 		"@types/cookie-parser": "^1.4.2",
 		"@types/express": "^4.17.2",
 		"@types/express-session": "^1.15.16",
-		"@types/js-yaml": "^3.12.1",
-		"@types/mongoose": "^5.5.35",
-		"@types/node": "^13.1.1",
+		"@types/js-yaml": "^3.12.2",
+		"@types/mongoose": "^5.7.0",
+		"@types/node": "^13.7.0",
 		"@types/passport": "^1.0.2",
 		"@types/passport-local": "^1.0.33",
 		"@types/rimraf": "^2.0.3",
-		"@typescript-eslint/eslint-plugin": "^2.13.0",
-		"@typescript-eslint/parser": "^2.13.0",
-		"@typescript-eslint/typescript-estree": "^2.13.0",
+		"@typescript-eslint/eslint-plugin": "^2.19.0",
+		"@typescript-eslint/parser": "^2.19.0",
+		"@typescript-eslint/typescript-estree": "^2.19.0",
 		"dotenv": "^8.2.0",
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-config-prettier": "^6.8.0",
+		"eslint-config-prettier": "^6.10.0",
 		"eslint-import-resolver-typescript": "^2.0.0",
-		"eslint-plugin-import": "^2.19.1",
+		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-prettier": "^3.1.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^1.19.1",
 		"ts-loader": "^6.0.4",
-		"ts-node": "^8.5.4",
+		"ts-node": "^8.6.2",
 		"ts-node-dev": "^1.0.0-pre.44",
 		"tsconfig-paths": "^3.9.0",
-		"typescript": "^3.7.4"
+		"typescript": "^3.7.5"
 	},
 	"scripts": {
-		"dev": "ts-node-dev --watch src -r dotenv/config -r tsconfig-paths/register src/index.ts",
-		"build": "ts-node -r dotenv/config -r tsconfig-paths/register src/index.ts"
+		"dev": "ts-node-dev --watch src -r dotenv/config -r tsconfig-paths/register src/application/route/index.ts",
+		"build": "ts-node -r dotenv/config -r tsconfig-paths/register src/application/route/index.ts"
 	}
 }
